--- a/css/style.css
+++ b/css/style.css
@@ -765,7 +765,7 @@ background: #3a385d;
   width: 240px;
   padding: 20px 0;
   color: #A5BFD2;
-  background: #1f2123;
+  background: #26253E;
   font-size: 14px;
   line-height: 20px;
   overflow: auto;
@@ -820,7 +820,7 @@ background: #3a385d;
   left: 0;
   right: 0;
   height: 56px;
-  background: #1f2123;
+  background: #26253E;
   color: #FFF;
   -webkit-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
